# another-iptv-player

./: .gitignore  AGENTS.md  CHANGELOG.md  LOCAL_TEST.md  LOCAL_TEST_WINDOWS.md  README  README.md  TEST_INSTALLER.md  package-lock.json  package.json  pubspec.yaml  test-installer-locally.sh  test-installer.ps1  vercel.json
.github/: funding.yml
.github/workflows/: build-android.yml  build-ios.yml  build-linux.yml  build-macos.yml  build-web.yml  build-windows.yml  deploy-web.yml  release.yml  test-windows-installer.yml
apps/android/: settings.gradle.kts
apps/android/app/src/main/cpp/: CMakeLists.txt  mpv_jni.cpp
apps/flutter/: .gitignore
apps/windows/: README.md
docs/: next.config.mjs  package-lock.json  package.json
docs/app/: globals.css  manifest.ts  robots.ts  sitemap.ts
docs/components/: Analytics.tsx  Download.tsx  Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  HowToGallery.tsx  JsonLd.tsx  LanguageSwitcher.tsx  Marquee.tsx  Nav.tsx  Page.tsx  Reveal.tsx  Screenshots.tsx  Support.tsx  ThemeToggle.tsx  icons.tsx
docs/lib/: data.ts  structuredData.ts
docs/public/: CNAME  index.html
ios/Runner/: Info.plist
lib/: main.dart
lib/controllers/: category_detail_controller.dart  favorites_controller.dart  m3u_controller.dart  m3u_home_controller.dart  watch_history_controller.dart  xtream_code_home_controller.dart
lib/database/: database.dart  database.g.dart
lib/l10n/: app_ar.arb  app_de.arb  app_en.arb  app_es.arb  app_fr.arb  app_hi.arb  app_localizations.dart  app_localizations_ar.dart  (+13 more)
web/: index.html
windows/: installer.nsi  license.txt
(+228 files in other folders)
